@@ -1,3 +1,9 @@
+2014-09-19  Joost VandeVondele  <vondele@gcc.gnu.org>
+
+	PR fortran/63152
+	* gfortran.dg/auto_char_dummy_array_1.f90: Fix undefined behavior.
+	* gfortran.dg/pr63152.f90: New test.
+
 2014-09-19  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	PR c++/58328
